feat: updated exercution command and pom dependencies